<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/purple_500"
        android:minHeight="?attr/actionBarSize"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSearch"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/purple_700"
                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/home_search_et"
                    android:layout_width="217dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:autofillHints=""
                    android:backgroundTint="#00FFFFFF"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:inputType="textAutoComplete"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <ImageButton
                    android:id="@+id/home_search_btn"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="42dp"
                    android:layout_height="44dp"
                    android:contentDescription="@string/search_your_recipes"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_search" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressbar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/empty_view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_results_found" />

    </RelativeLayout>



</LinearLayout>

